Fixed spacing issues on rack layout

--- a/site_infra/z-style.css
+++ b/site_infra/z-style.css
@@ -70,8 +70,8 @@ div.z-table td { padding: 0px 2px 0px 2px; overflow:hidden; white-space:nowrap; 
 div.z-table:hover { box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 18px 0 rgba(0,0,0,0.19) }
 
 tr.z-rack { line-height:14px; }
-td.z-rack-indx { font-weight:bold; font-size:8px; color:grey; vertical-align:bottom }
-td.z-rack-data { border: solid 2px grey; width:200px }
+td.z-rack-indx { font-weight:bold; font-size:8px; color:grey; vertical-align:bottom; padding:2px; }
+td.z-rack-data { border: solid 2px grey; width:220px; font-size:12px; }
 
 /*############################################ NavBar ############################################*/
 
